--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ tfoot {
   font-weight: bold;
 }
 
+
 .disabled {
   opacity: 0.3;
 }
@@ -55,6 +56,7 @@ tfoot {
 
 /* 以下TodoList */
 
+#open,
 #close {
   width: 100px;
   border: 1px solid gray;
@@ -81,7 +83,7 @@ tfoot {
   text-align: center;
   background: white;
   position: absolute;
-  top: 40px;
+  top: 350px;
   left: 0;
   right: 0;
   margin: 0 auto;
@@ -117,6 +119,6 @@ li {
 }
 
 #modal.hidden {
-  transform: translate(0, -500px);
+  transform: translate(0, -1000px);
 }
 
